feat: Added totalDuration calculation in AvailableSlots usecase feat: Seperated repositories.go file into each domain repository with filename convention <domain_name>-repository.go feat: Seperated router from handler struct to make it into its own struct. feat: Added "make watch" command to watch for App container fix: Fixed naming issue for service, where some cases still being named service_definition fix: Fixed an issue where "make swagger" command would produce and error because of missing the path to swagger definition file (in handler) fix: Fixed an issue where DATABASE_URL was not defined in .env. Remove the POSTGRE_DATABASE_URL and let it be built in main
